     a prolonged data stale condition. [issue #704, PR #2564]

 - nutdrv_qx updates:
   * added Visench C1K (using serial port converter with USB ID `1a86:7523`)
     as known supported by `nutdrv_qx` (Megatec protocol) since at least
     NUT v2.7.4 release. [#2395]
   * introduced `innovart31` protocol support for Innova RT 3/1 UPSes. [#2712]

 - bicker_ser: added new driver for Bicker 12/24Vdc UPS via RS-232 serial
   communication protocol, which supports any UPS shipped with the PSZ-1053
   extension module. [PR #2448]

 - liebert-gxe: added new driver with support for Liebert GXE Series UPS
   (serial or USB posing as a serial port). [#2629]

 - nhs_ser: added new driver for numerous NHS Nobreaks, senoidal line -- UPS
   models with serial port, made by NHS Sistemas Eletronicos LTDA and popular
   in Brazil. Currently this driver only builds on Linux. [#2692]

 - `usbhid-ups` and `netxml-ups` updated to handle "No battery installed!"
   alarm also to set the `RB` (Replace Battery) value in `ups.status`.
   This may cause dual triggering of notifications (as an `ALARM` generally
   and as an important `REPLBATT` status in particular) in `upsmon`, but
   better safe than sorry. [#415]

 - usbhid-ups updates:
   * Support of the `onlinedischarge_log_throttle_hovercharge` in the NUT
     v2.8.2 release was found to be incomplete. [#2423, follow-up to #2215]
   * Added support for `interrupt_pipe_no_events_tolerance=N` setting to
     optionally prevent UPS lockup, indicated by continuous "Got 0 HID Objects"
     situation as a clue, by reconnecting on stale data.  Note that while some
     devices just report information upon subsequent poll and just have nothing
     urgent to declare with an USB interrupt, others (e.g. APC BXnnnnMI) were
     seen to lock up until a full connection restart. [#2671, #2681]
   * Added support for `lbrb_log_delay_sec=N` setting to delay propagation of
     `LB` or `LB+RB` state (buggy with APC BXnnnnMI devices circa 2023-2024).